"modifica primeiras áreas da página"

--- a/index.html
+++ b/index.html
@@ -46,34 +46,34 @@
             <h5>HTML/CSS</h5>
             <p class="porcentagem-escrita">90%</p>
             <div class="container-traco-90">
-              <div class="parte-verde-90"></div>
+              <div class="altura-porcentagens-mobile parte-verde-90"></div>
               <div class="parte-retangular"></div>
-              <div class="parte-cinza-90"></div>
+              <div class="altura-porcentagens-mobile parte-cinza-90"></div>
             </div>
 
 
             <h5>UI/UX Design</h5>
             <p class="porcentagem-escrita">70%</p>
             <div class="container-traco-80">
-              <div class="parte-verde-80"></div>
+              <div class="altura-porcentagens-mobile parte-verde-80"></div>
               <div class="parte-retangular"></div>
-              <div class="parte-cinza-80"></div>
+              <div class="altura-porcentagens-mobile parte-cinza-80"></div>
             </div>
 
             <h5>Python</h5>
             <p class="porcentagem-escrita">75%</p>
             <div class="container-traco-75">
-              <div class="parte-verde-75"></div>
+              <div class="altura-porcentagens-mobile parte-verde-75"></div>
               <div class="parte-retangular"></div>
-              <div class="parte-cinza-75"></div>
+              <div class="altura-porcentagens-mobile parte-cinza-75"></div>
             </div>
 
             <h5>JavaScript</h5>
             <p class="porcentagem-escrita">65%</p>
             <div class="container-traco-65">
-              <div class="parte-verde-65"></div>
+              <div class="altura-porcentagens-mobile parte-verde-65"></div>
               <div class="parte-retangular"></div>
-              <div class="parte-cinza-65"></div>
+              <div class="altura-porcentagens-mobile parte-cinza-65"></div>
             </div>
 
         </section>
