conversão das áreas 3 e 4 para adaptação mobile

--- a/index.html
+++ b/index.html
@@ -89,36 +89,44 @@
             
             <div class="graphic-web">
               <div class="gd">
+                <div class="imagem-titulo-projetos">
                   <figure class="imagens-projetos">
                     <img class="icones-projetos" src="assets/icons8-gráfico-de-linha-48.png"/>
                   </figure>
                   <h6>Graphic Design</h6>
+                </div>
                 <p class="textos-projetos"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel erat a nulla volutpat semper id in tellus</p>
               </div>
               <div class="wd">
+                <div class="imagem-titulo-projetos">
                   <figure class="imagens-projetos">
                     <img class="icones-projetos" src="assets/icons8-web-50.png"/>
                   </figure>
                   <h6>Web Design</h6>
+                </div>
                   <p class="textos-projetos"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel erat a nulla volutpat semper id in tellus</p>
               </div>
             </div>
             
             <div class="ui-front">
               <div class="uiux">
+                <div class="imagem-titulo-projetos">
                   <figure class="imagens-projetos">
                     <img class="icones-projetos" src="assets/icons8-interface-de-usuário-natural-2-50.png"/>
                   </figure>
 
-                <h6>UI/UX Design</h6>
+                  <h6>UI/UX Design</h6>
+                </div>
                 <p class="textos-projetos"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel erat a nulla volutpat semper id in tellus</p>
               </div>
 
               <div class="fd">
+                <div class="imagem-titulo-projetos">
                   <figure class="imagens-projetos">
                     <img class="icones-projetos" src="assets/icons8-código-50.png"/>
                   </figure>
                   <h6>Frontend Development</h6>
+                </div>
                 <p class="textos-projetos"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel erat a nulla volutpat semper id in tellus</p>
               </div>
             </div>
